// SQL Schema
// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table Seasons {
  year integer  [not null]
  gameName varchar
  gameID integer [not null, pk]

}

Table Districts{
  districtCode varchar [not null, pk]
  districtName varchar
}

Table TeamInfo {
  teamNumber integer  [not null]
  nameFull varchar
  nameShort varchar
  districtCode varchar [ref: > Districts.districtCode]
  rookieYear integer
  city varchar
  stateProv varchar
  country varchar
}


Table Events {
  gameID integer [not null, ref: > Seasons.gameID]
  eventCode varchar [not null]
  event varchar
  eventType varchar 
  date date
  location varchar
  Webcast varchar
  weekNumber integer
  districtCode varchar

  indexes {
    (gameID, eventCode) [pk, unique] // composite pk
  }
}


table MatchTable {
  gameID integer  [not null]
  eventCode varchar  [not null]
  matchType varchar [not null]
  matchID integer [not null]
  matchKey integer [not null, pk, unique]

  indexes {
    (gameID,eventCode,matchType,matchID) [unique]
  }
}
Ref: MatchTable.(gameID,eventCode) > Events.(gameID,eventCode) 


Table MatchTeams {
  matchKey integer [not null, ref: > MatchTable.matchKey]
  teamNumber integer [not null, ref: > TeamInfo.teamNumber ]
  alliance varchar [not null]
  
  indexes {
    (matchKey, teamNumber) [pk, unique] // composite PK
  }
}


Table MatchData2026 {
  matchKey integer [ not null, ref: > MatchTable.matchKey]
  alliance integer  [not null]
  totalScore  integer
  teleopCount integer
  autoScore integer
  shift1Points integer
  shift2Points integer
  shift3Points integer
  shift4Points integer
  endgamePoints integer
  autoTowerPoints integer
  totalAutoPoints integer
  endgameTowerPoints integer
  totalTowerPoints integer
  minorFoulCount integer
  majorFoulCount integer
  foulPoints integer
  adjustPoins integer
  RP integer

  indexes {
    (matchKey, alliance) [pk, unique] //composite pk
  }
}





